refactor(util): enhance update checker with robust version comparison
- Improved version checking logic with semantic versioning support
- Added detailed debug logging for version comparisons
- Implemented version normalization to handle various version formats
- Enhanced error handling and connection management
- Refined update notification messages with better formatting
- Added more robust error logging and timeout handling